bk_ida/gobmkida/c1/safety_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/safety_to_string/src/engine/printutils.c:807:8: error: use of undeclared identifier 'off_48A688'
return off_48A688[status]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/safety_to_string/src/obj/1/printutils.o] Error 1
